# maxcorr

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: main.yml
cfair/: __init__.py  typing.py
cfair/backend/: __init__.py  backend.py  numpy.py  tensorflow.py  torch.py
cfair/backends/: __init__.py  backend.py  numpy.py  tensorflow.py  torch.py
cfair/hgr/: __init__.py  adversarial.py  hgr.py  kernel.py
cfair/indicators/: __init__.py  density.py  gradient.py  indicator.py  kernel.py  neural.py  randomized.py
cfair/metrics/: __init__.py  adversarial.py  kernel.py  metric.py  neural.py
cfair/metrics/kernel/: __init__.py  abstract.py  gedi.py  hgr.py
maxcorr/: __init__.py
maxcorr/backends/: numpy.py  tensorflow.py
maxcorr/indicators/: density.py  gradient.py  indicator.py  kernel.py  randomized.py
test/backend/: test_backend.py  test_numpy.py  test_tensorflow.py  test_torch.py
test/backends/: test_backend.py  test_numpy.py  test_tensorflow.py  test_torch.py
test/hgr/: test_adversarial.py  test_hgr.py  test_kernel.py
test/indicators/: test_density.py  test_gradient.py  test_indicator.py  test_kernel.py  test_neural.py  test_randomized.py
test/metrics/: test_adversarial.py  test_kernel.py  test_metric.py  test_neural.py
