# test using "pytest"
# build using "hatch build"
# publish using "hatch publish"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = 'cFair'
version = '0.1.0'
requires-python = '>=3.9'
dependencies = [
    'numpy >= 1.24, < 2',
    'pandas >= 1.4',
    'scikit-learn >= 1.6',
    'scipy >= 1.10'
]
description = 'cFair: A Package for Fairness with Continuous Attributes'
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    { name = 'Luca Giuliani', email = 'luca.giuliani13@unibo.it' },
    { name = 'University of Bologna - DISI' }
]
maintainers = [
    { name = 'Luca Giuliani', email = 'luca.giuliani13@unibo.it' }
]
license = { file = "LICENSE" }

[project.optional-dependencies]
torch = [
    'torch >= 2.5.1'
]
tensorflow = [
    'tensorflow >= 2.14; platform_system != "Darwin"',
    'tensorflow-macos >= 2.14; platform_system == "Darwin"'
]

[tool.hatch.build.targets.wheel]
packages = ['cfair']

[project.urls]
Repository = "https://github.com/giuluck/cFair"